--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Retro Arcade</title>
+  
 </head>
 <body>
-    <!--Header-->
-<header class="header"> 
-        <div id="navbar">
-        <h3 id="title">RETRO ARCADE</h3>
-        <a href="events.html">Events</a> 
-        <a href="games.html">Games</a> 
-        </div>
+
+  <!-- Header -->
+  <div id="navbar">
+    <div class="title">RETRO ARCADE</div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="games.html">Games</a>
+      <a href="events.html">Events</a>
+    </div>
+  </div>
 </header>
-    grsrtyrty
+ <div class="dev"><img src="retro_arcade_logo.png" alt=""></div>  
+
+ <p>We're an indie game company who specialises in retro feeling games and ports of old retro titles.</p>
+
+
+
+
+
+
+
 </body>
 </html>
