--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Header -->
   <div id="navbar">
-    <div class="title">RETRO ARCADE</div>
+    <div class="title"><img src="logo2.png" alt="Retro Arcade"></div>
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="games.html">Games</a>
@@ -19,14 +19,29 @@
     </div>
   </div>
 </header>
- <div class="dev"><img src="retro_arcade_logo.png" alt=""></div>  
+ <div class="dev"><img src="logo1.png" alt="Retro Arcade"></div>  
+<h1> Welcome to RETRO ARCADE!</h1>
+ <p>We're a small indie game company who specialises in retro feeling games and ports of old retro titles. 
+ </p>
 
- <p>We're an indie game company who specialises in retro feeling games and ports of old retro titles.</p>
+ <h2>About Us</h2>
+ <p>Founded in 2025, Retro Arcade is a small team of 3 developers who came together to bring classic feeling games that harken back to the 90s and early 2000s. 
+    <br><br>
+    If you would like to contact us, please contact us via the links below.
+ </p>
 
 
 
-
-
+<footer>
+    <div id="footer">
+        <div class="nav-links">
+        <a href="http://">Facebook</a>
+        <a href="http://">Twitter</a>
+        <a href="http://">Instagram</a>
+        <a href="http://">LinkedIn</a>
+    </div></div>
+  
+</footer>
 
 
 </body>
