--- a/games.html
+++ b/games.html
@@ -22,31 +22,44 @@
 
   
     <h1>Games</h1>
- <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc cursus egestas turpis vel eleifend. Suspendisse leo elit, pharetra a molestie ac, volutpat at nibh. Vivamus malesuada enim non vehicula sollicitudin.
+ <p> Scroll through our greatest collection of unforgotten nostalgia from thirty-two classic systems.
+  Replay your childhood favorites or discover retro gems you never knew existed. 
+  <br><br>  
+  Looking for a specific title or system? Explore our library of retro games made for every era and platform. Pick your system, browse the titles, and bring back the magic.
+  Buy with ease – No cartridges to blow on, just pure nostalgia at your fingertips.
  </p>
 
 
 <div id="gallery">
   <ul class="price">
     <li><img class="images" src="images 2\game1.png" alt=""></li>
-    <li class="grey">£ ???</li>
-    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
+    <li class="grey">£ 6.99</li>
+    <li>Fin Fin on Teo the Magic Planet 1996</li>
+    <li>PC</li>
+    <li>Pet-raising simulation game developed by Fujitsu Interactive, Inc. that utilizes microphone communication.</li>
   </ul>
 
   <ul class="price">
     <li><img class="images" src="images 2\imageghfg.png" alt=""></li>
-    <li class="grey">£ ???</li>
-    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
+    <li class="grey">£ 5.99</li>
+    <li>Eggerland (エッガーランド) 1985</li>
+    <li>MSX / NES / PC</li>
+    <li>Puzzle action game developed by HAL Laboratory that eventually evolved into the Adventures of Lolo series.</li>
   </ul>
 
 
   <ul class="price">
     <li><img class="images" src="images 2\game2.png" alt=""></li>
-    <li class="grey">£ ???</li>
-    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
+    <li class="grey">£ 4.99</li>
+    <li>Mushi no Idokoro (虫の居所) 1995</li>
+    <li>PlayStation</li>
+    <li>3D brain-training puzzle game developed by Gen Soft where you slide cubes to match two insects and eliminate them. </li>
   </ul></div>
 
-
+ <p> Whether you're a collector or a returning player, there's something here for everyone to relive the golden ages of gaming.
+  <br><br> 
+  If you would like to contact us, please contact us via the links below.
+ </p>
 
 
 <footer>
