--- a/events.html
+++ b/events.html
@@ -29,18 +29,18 @@
 <div id="gallery">
   <ul class="price">
     <li><img class="images" src="images 2\event1.png" alt=""></li>
-    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
+    <li>Dance Planet is a fun and engaging idle game designed for your browser. In this game, players manage and grow their own dance empire</li>
   </ul>
 
   <ul class="price">
     <li><img class="images" src="images 2\event2.png" alt=""></li>
-    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
+    <li>Space Aliens- Can you solve the mystery of this motel? The truth of whats happened?</li>
   </ul>
 
 
   <ul class="price">
     <li><img class="images" src="images 2\event3.jpg" alt=""></li>
-    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
+    <li>Lets Work is a music type idle game, where each beat counts! keep your eyes open for the magic of music! </li>
   </ul></div>
 
 
