--- a/events.html
+++ b/events.html
@@ -29,18 +29,18 @@
 <div id="gallery">
   <ul class="price">
     <li><img class="images" src="images 2\event1.png" alt=""></li>
-    <li>Dance Planet is a fun and engaging idle game designed for your browser. In this game, players manage and grow their own dance empire</li>
+    <li>Dance Planet is a fun and engaging idle game designed for your browser. In this game, players manage and grow their own dance empire<br/>Friday 8th May<br/>7pm-8am</li>
   </ul>
 
   <ul class="price">
     <li><img class="images" src="images 2\event2.png" alt=""></li>
-    <li>Space Aliens- Can you solve the mystery of this motel? The truth of whats happened?</li>
+    <li>Space Aliens- Can you solve the mystery of this motel? The truth of whats happened?<br/>Saturday 9th May<br/>6pm-11pm</li>
   </ul>
 
 
   <ul class="price">
     <li><img class="images" src="images 2\event3.jpg" alt=""></li>
-    <li>Lets Work is a music type idle game, where each beat counts! keep your eyes open for the magic of music! </li>
+    <li>Lets Work is a music type idle game, where each beat counts! keep your eyes open for the magic of music!<br/>Sunday 10th May<br/>12pm-4pm</br.></li>
   </ul></div>
 
 
